Revert "error resolving"
This reverts commit 7912869a48a5b7deea516900e4a4bc4fab33ebc2, reversing
changes made to bbf61cc28cc43da84033ec5c152c43b2f44f91d0.

--- a/meta.yaml
+++ b/meta.yaml
@@ -68,10 +68,11 @@ requirements:
     - fiona
     - xlsxwriter
     # Multi language support:
-    - ncl>=6.5.0
+    - ncl=6.5
     - jasper!=1.900.31  # pinned NCL dependency
     - r-base
-    - cdo
+    - cdo=1.9.5
+    - hdf5=1.10.3
     # TODO: add julia
 
 test:
