--- a/esmvaltool/recipes/recipe_C3S_511_SPQB_experiments.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB_experiments.yml
@@ -30,8 +30,8 @@ documentation:
 
 
 datasets:
-  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
-#  - {dataset: XCH4, type: sat, project: OBS,  level: L3, version: CDS, start_year: 2003,  end_year: 2016}
+#  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
+  - {dataset: CDS-XCH4, type: sat, project: OBS,  version: L3, tier: 3, start_year: 2003,  end_year: 2016}
 # looks for: [project]_[obssystem]_[dataset]_[level]_[field]_[short_name]*
 preprocessors:
   noop: {}
@@ -40,11 +40,11 @@ diagnostics:
   SPQB:
     description: Single product quality brief.
     variables:
-      ta:
-#      xch4:
+#      ta:
+      xch4:
         preprocessor: noop
-#        field: T2Ms
-        field: T3Ms
+        field: T2Ms
+#        field: T3Ms
         derive: False
         mip: Amon
     scripts:
