Set OBS filename time labels (YYYYMM) in save_variable of utilities.py (#942)

--- a/esmvaltool/utils/cmorizers/obs/cmor_config/WOA.yml
+++ b/esmvaltool/utils/cmorizers/obs/cmor_config/WOA.yml
@@ -4,6 +4,7 @@ proj:
   dataset: 'WOA'
   version: '2013v2'
   realm: 'clim'
+  project: 'CMIP5'
   frequency:
     'thetao': 'Omon'
     'so': 'Omon'
