little typos for Landschuetzer2016

--- a/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
+++ b/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
@@ -6,7 +6,7 @@ attributes:
   tier: 2
   modeling_realm: clim
   project_id: CMIP5
-  source: 'CRESCENDO WP5 (CMCC)'
+  source: 'https://www.nodc.noaa.gov/archive/arc0105/0160558/3.3/data/0-data/'
 
 # Variables to cmorize
 variables:
