--- a/esmvaltool/recipes/recipe_smpi.yml
+++ b/esmvaltool/recipes/recipe_smpi.yml
@@ -267,86 +267,86 @@ diagnostics:
         normalization: CMIP5
         smpi_n_bootstrap: 100
 
-#  tos:
-#    description: Sea surface temperature
-#    themes:
-#      - phys
-#    realms:
-#      - ocean
-#    variables:
-#      tos:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: HadISST
-#        mip: Omon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  tos:
+    description: Sea surface temperature
+    themes:
+      - phys
+    realms:
+      - ocean
+    variables:
+      tos:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: HadISST
+        mip: Omon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
-#  sic:
-#    description: Sea ice fraction
-#    themes:
-#      - phys
-#    realms:
-#      - seaIce
-#    variables:
-#      sic:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: HadISST
-#        mip: OImon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: HadISST,      project: OBS, type: reanaly, version: 20130524, start_year: 1980, end_year: 2005, tier: 2}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  sic:
+    description: Sea ice fraction
+    themes:
+      - phys
+    realms:
+      - seaIce
+    variables:
+      sic:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: HadISST
+        mip: OImon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
-#  hfds:
-#    description: Net Surface Heat Flux
-#    themes:
-#      - phys
-#    realms:
-#      - ocean
-#    variables:
-#      hfds:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: ERA-Interim
-#        mip: Omon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 2000, end_year: 2005, tier: 3}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  hfds:
+    description: Net Surface Heat Flux
+    themes:
+      - phys
+    realms:
+      - ocean
+    variables:
+      hfds:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: ERA-Interim
+        mip: Omon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
   tauu:
     description: Zonal Wind Stress
