--- a/esmvaltool/utils/testing/recipe_settings/options.yml
+++ b/esmvaltool/utils/testing/recipe_settings/options.yml
@@ -243,29 +243,29 @@ recipe_hyint.yml:
   norm_years:  # first and last year of reference normalization period to be used for normalized indices
     - [2004, 2006]
   selfields:  # indices to be plotted. Select one or more fields from the following list (order-sensitive) as a numerical index:
-    - [1]  # SDII
-    - [2]  # DSL
-    - [3]  # WSL
-    - [4]  # HY-INT
-    - [5]  # ABS_INT
-    - [6]  # ABS_DSL
-    - [7]  # ABS_WSL
-    - [8]  # PA
-    - [9]  # R95
-    - [8, 4, 1, 9, 3, 2]
-    - [1, 2, 3, 4, 5, 6, 7, 8, 9]
+    - ["pa_norm"]
+    - ["hyint"]
+    - ["int_norm"]
+    - ["r95_norm"]
+    - ["wsl_norm"]
+    - ["dsl_norm"]
+    - ["int"]
+    - ["dsl"]
+    - ["wsl"]
+    - ["pa_norm", "dsl", "wsl", "r95_norm", "wsl_norm", "int"]
+    - ["pa_norm", "hyint", "int_norm", "r95_norm", "wsl_norm", "dsl_norm", "int", "dsl", "wsl"]
   selregions:  # Select regions for timeseries and maps from the following list as a numerical index:
-    - [1]  # World
-    - [2]  # World60 (60S/60N)
-    - [3]  # Tropics (30S/30N)
-    - [4]  # South America
-    - [5]  # Africa
-    - [6]  # North America
-    - [7]  # India
-    - [8]  # Europe
-    - [9]  # East-Asia
-    - [10]  # Australia
-    - [2, 4, 5, 6, 7]
+    - [GL]  # World
+    - [GL60]  # World60 (60S/60N)
+    - [TR]  # Tropics (30S/30N)
+    - [SA]  # South America
+    - [AF]  # Africa
+    - [NA]  # North America
+    - [IN]  # India
+    - [EU]  # Europe
+    - [EA]  # East-Asia
+    - [AU]  # Australia
+    - [GL60, AU, EU, AF]
   plot_type:  # type of figures to be plotted. Select one or more from:
     - [1]  # lon/lat maps per individual field/exp/multi-year mean
     - [2]  # lon/lat maps per individual field exp-ref-diff/multi-year mean
@@ -311,9 +311,6 @@ recipe_hyint.yml:
   trend_years:
     - false
     - [2002, 2005]
-  lm_trend:
-    - true
-    - false
   add_trend:
     - true
     - false
