--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -140,7 +140,7 @@ authors:
     institute: NCAR, USA
     email: andrew 'at' ucar.edu
   gier_be:
-    name: Gier, Betina
+    name: Gier, Bettina
     institute: University of Bremen, Germany
     email: betina.gier 'at' dlr.de
   gott_kl:
