--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -148,7 +148,7 @@ authors:
     institute: DLR, Germany
     email: klaus-dirk.gottschaldt 'at' dlr.de
   guem_vi:
-    name: Virginie Guemas
+    name: Guemas, Virginie
     institute: BSC, Spain
     email: virginie.guemas 'at' bsc.es
   hage_st:
