--- a/esmvaltool/recipes/recipe_smpi.yml
+++ b/esmvaltool/recipes/recipe_smpi.yml
@@ -24,8 +24,8 @@ documentation:
     - c3s-magic
 
 datasets:
-  - {dataset: CNRM-CM5,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 1982}
-  - {dataset: CSIRO-Mk3-6-0,  project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 1982}
+  - {dataset: CNRM-CM5,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
+  - {dataset: CSIRO-Mk3-6-0,  project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
 #  - {dataset: GFDL-ESM2G,     project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
 #  - {dataset: MIROC5,         project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
 #  - {dataset: MIROC-ESM,      project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
@@ -91,7 +91,7 @@ diagnostics:
         mip: Amon
         field: T3M
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading: &grading_settings
         script: perfmetrics/main.ncl
@@ -118,7 +118,7 @@ diagnostics:
         mip: Amon
         field: T3M
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -145,7 +145,7 @@ diagnostics:
         mip: Amon
         field: T3M
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -172,7 +172,7 @@ diagnostics:
         mip: Amon
         field: T3M
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -199,7 +199,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -226,7 +226,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -253,7 +253,7 @@ diagnostics:
         mip: Amon
         field: T2Ms
     additional_datasets:
-      - {dataset: GPCP-SG,      project: obs4mips, level: L3, version: v2.2, start_year: 1980, end_year: 1982, tier: 1}
+      - {dataset: GPCP-SG,      project: obs4mips, level: L3, version: v2.2, start_year: 1980, end_year: 2005, tier: 1}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -267,86 +267,86 @@ diagnostics:
         normalization: CMIP5
         smpi_n_bootstrap: 100
 
-#  tos:
-#    description: Sea surface temperature
-#    themes:
-#      - phys
-#    realms:
-#      - ocean
-#    variables:
-#      tos:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: HadISST
-#        mip: Omon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  tos:
+    description: Sea surface temperature
+    themes:
+      - phys
+    realms:
+      - ocean
+    variables:
+      tos:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: HadISST
+        mip: Omon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
-#  sic:
-#    description: Sea ice fraction
-#    themes:
-#      - phys
-#    realms:
-#      - seaIce
-#    variables:
-#      sic:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: HadISST
-#        mip: OImon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: HadISST,      project: OBS, type: reanaly, version: 20130524, start_year: 1980, end_year: 2005, tier: 2}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  sic:
+    description: Sea ice fraction
+    themes:
+      - phys
+    realms:
+      - seaIce
+    variables:
+      sic:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: HadISST
+        mip: OImon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: HadISST,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 2}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
-#  hfds:
-#    description: Net Surface Heat Flux
-#    themes:
-#      - phys
-#    realms:
-#      - ocean
-#    variables:
-#      hfds:
-#        preprocessor: ppNOLEVirreg
-#        reference_dataset: ERA-Interim
-#        mip: Omon
-#        field: T2Ms
-#    additional_datasets:
-#      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 2000, end_year: 2005, tier: 3}
-#    scripts:
-#      grading:
-#        script: perfmetrics/main.ncl
-#        plot_type: cycle_latlon
-#        time_avg: yearly
-#        region: Global
-#        range_option: 1
-#        draw_plots: false
-#        calc_grading: true
-#        metric: [SMPI]
-#        normalization: CMIP5
-#        smpi_n_bootstrap: 100
+  hfds:
+    description: Net Surface Heat Flux
+    themes:
+      - phys
+    realms:
+      - ocean
+    variables:
+      hfds:
+        preprocessor: ppNOLEVirreg
+        reference_dataset: ERA-Interim
+        mip: Omon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
+    scripts:
+      grading:
+        script: perfmetrics/main.ncl
+        plot_type: cycle_latlon
+        time_avg: yearly
+        region: Global
+        range_option: 1
+        draw_plots: false
+        calc_grading: true
+        metric: [SMPI]
+        normalization: CMIP5
+        smpi_n_bootstrap: 100
 
   tauu:
     description: Zonal Wind Stress
@@ -361,7 +361,7 @@ diagnostics:
         mip: Amon
         field: TO2Ms
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
@@ -388,7 +388,7 @@ diagnostics:
         mip: Amon
         field: TO2Ms
     additional_datasets:
-      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 1982, tier: 3}
+      - {dataset: ERA-Interim,      project: OBS, type: reanaly, version: 1, start_year: 1980, end_year: 2005, tier: 3}
     scripts:
       grading:
         script: perfmetrics/main.ncl
