--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -14,7 +14,7 @@ authors:
   ande_bo:
     name: Andela, Bouwe
     institute: NLeSC, Netherlands
-    email: b.andela 'atcecenter.nl
+    email: b.andela 'at' esciencecenter.nl
   broe_bj:
     name: Broetz, Bjoern
     institute: DLR, Germany
@@ -142,7 +142,7 @@ authors:
   gier_be:
     name: Gier, Bettina
     institute: University of Bremen, Germany
-    email: betina.gier 'at' dlr.de
+    email: bettina.gier 'at' dlr.de
   gott_kl:
     name: Gottschaldt, Klaus-Dirk
     institute: DLR, Germany
@@ -564,7 +564,7 @@ references:
   rebora06jhm: "Rebora et. al., JHM 7, 724, 2006."
   righi13acp: "Righi et al., Atmos. Chem. Phys., 13, 9939-9970, doi:10.5194/acp-13-9939-2013, 2013."
   righi15gmd: "Righi et al., Geosci. Model Dev., 8, 733-768 doi:10.5194/gmd-8-733-2015, 2015."
-  rk2008bams: "Reichler and Kim, Bull. Amer. Meteor. Soc., 89, 303–312, doi:10.1175/BAMS-89-3-303, 2008."
+  rk2008bams: "Reichler and Kim, Bull. Amer. Meteor. Soc., 89, 303-312, doi:10.1175/BAMS-89-3-303, 2008."
   roedenbeck13os: "Roedenbeck, C. et al., Ocean Sci., 9, 193-216, doi:10.5194/os-9-193-2013, 2013."
   roehrig13jclim: "Roehrig, R. et al., J. Climate, 26, 6471-6505, doi:10.1175/JCLI-D-12-00505.1, 2013."
   sperber12asl: "Sperber and Kim, Atmos. Sci. Lett., 13, 3, 187-193, doi:10.1002/asl.378, 2012."
