added missng ' around at

--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -14,7 +14,7 @@ authors:
   ande_bo:
     name: Andela, Bouwe
     institute: NLeSC, Netherlands
-    email: b.andela 'atcecenter.nl
+    email: b.andela 'at' cecenter.nl
   broe_bj:
     name: Broetz, Bjoern
     institute: DLR, Germany
