--- a/esmvaltool/recipes/recipe_collins13ipcc.yml
+++ b/esmvaltool/recipes/recipe_collins13ipcc.yml
@@ -903,10 +903,10 @@ diagnostics:
         # seasonalclim, annualclim)
         time_avg: seasonalclim
         # Labels on top of each panel (loop is seasons, scenarios, periods)
-        label: ["RCP8.5 2081-2100 DJF", "RCP8.5 2081-2100 MAM",
-                "RCP8.5 2081-2100 JJA", "RCP8.5 2081-2100 SON",
-                "RCP8.5 2181-2200 DJF", "RCP8.5 2181-2200 MAM",
-                "RCP8.5 2181-2200 JJA", "RCP8.5 2181-2200 SON"]
+        label: ["RCP8.5 2081-2100 DJF", "RCP8.5 2181-2200 DJF",
+                "RCP8.5 2081-2100 MAM", "RCP8.5 2181-2200 MAM",
+                "RCP8.5 2081-2100 JJA", "RCP8.5 2181-2200 JJA", 
+                "RCP8.5 2081-2100 SON", "RCP8.5 2181-2200 SON"]
 
         ### Optional attributes
         # List with seasons index (required if time_avg "seasonalclim")
@@ -949,8 +949,8 @@ diagnostics:
         # pltname:
         # Print number of models at top-right of the figure
         model_nr: true
-
-
+        
+        
   ###  Mean Total Radiation change in RCPs for multi model mean ###############
   IAV_calc_rtmt:
     description: Calculate total radiation interannual variability
