--- a/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
+++ b/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
@@ -7,6 +7,8 @@ attributes:
   modeling_realm: clim
   project_id: CMIP5
   source: 'https://www.nodc.noaa.gov/archive/arc0105/0160558/3.3/data/0-data/'
+  reference: 'landschuetzer2016'
+  comment: ''
 
 # Variables to cmorize
 variables:
